--- a/index.html
+++ b/index.html
@@ -375,8 +375,8 @@
         <div class="hero-section">
   <div id="globe-container"></div>
   <div class="hero-content">
-    <h1>Your Journey, Our Priority</h1>
-    <p>From luxury vacations to global career opportunities, we handle every detail. Experience the world with GoldenHoof.</p>
+    <h1>Secure Your Work Permit Today</h1>
+    <p>Get expert immigration guidance and start your global career with GoldenHoof Travels.</p>
     <div class="cta-buttons">
       <a href="work-visa.html" class="btn primary-btn">Work Abroad</a>
       <a href="contact.html" class="btn secondary-btn">Contact Us</a>
@@ -744,4 +744,5 @@ if (scrollToTopBtn) {
 </script>
 </body>
 </html>
+
 
