--- a/about.html
+++ b/about.html
@@ -155,7 +155,7 @@
         <section class="bg-white">
             <div class="container mx-auto px-6 py-16 text-center">
                 <h1 class="text-4xl md:text-5xl font-bold text-deep-green mb-4">Crafting Journeys, Building Futures</h1>
-                <p class="text-gray-600 text-lg max-w-3xl mx-auto">GoldenHoof Travels was born from a passion for exploration and a commitment to providing unparalleled service. We believe travel is more than just visiting a new place; it's about creating opportunities and unforgettable experiences.</p>
+                <p class="text-gray-600 text-lg max-w-3xl mx-auto">GoldenHoof Travels was founded with a vision to connect people with global opportunities. What began with a passion for exploration has grown into a mission — to help individuals work, study, and build meaningful lives abroad through trusted, personalized visa guidance.</p>
             </div>
         </section>
 
@@ -184,22 +184,22 @@
                         <div class="bg-elegant-gold/10 p-5 rounded-full mb-4">
                             <i data-lucide="gem" class="w-10 h-10 text-elegant-gold"></i>
                         </div>
-                        <h3 class="text-xl font-bold text-deep-green mb-2">Luxury & Quality</h3>
-                        <p class="text-gray-600">We believe in providing a premium experience in everything we do, from five-star holidays to first-class career support.</p>
+                        <h3 class="text-xl font-bold text-deep-green mb-2">Expertise & Excellence</h3>
+                        <p class="text-gray-600">We believe in delivering a premium experience in everything we do — from expert visa consulting to career-focused international guidance that helps you grow beyond borders.</p>
                     </div>
                     <div class="flex flex-col items-center">
                          <div class="bg-elegant-gold/10 p-5 rounded-full mb-4">
                             <i data-lucide="shield-check" class="w-10 h-10 text-elegant-gold"></i>
                         </div>
                         <h3 class="text-xl font-bold text-deep-green mb-2">Trust & Transparency</h3>
-                        <p class="text-gray-600">Our relationship with clients is built on honesty. We provide clear, straightforward guidance you can depend on.</p>
+                        <p class="text-gray-600">Our foundation is honesty. We provide clear, genuine, and reliable visa assistance, ensuring every step of your global journey is handled with integrity.</p>
                     </div>
                     <div class="flex flex-col items-center">
                          <div class="bg-elegant-gold/10 p-5 rounded-full mb-4">
                             <i data-lucide="globe" class="w-10 h-10 text-elegant-gold"></i>
                         </div>
                         <h3 class="text-xl font-bold text-deep-green mb-2">Global Opportunity</h3>
-                        <p class="text-gray-600">We open doors to the world, whether for a week-long escape or a life-changing career move abroad.</p>
+                        <p class="text-gray-600">We open doors to the world — helping you work, study, and settle abroad with confidence. Your journey toward a brighter international future begins here.</p>
                     </div>
                 </div>
              </div>
@@ -215,7 +215,7 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
                     <!-- Team Member 1 -->
                     <div class="team-card bg-white rounded-lg shadow-lg overflow-hidden text-center">
-                        <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?q=80&w=1887&auto=format&fit=crop" alt="Founder Portrait" class="w-full h-64 object-cover object-center">
+                        <img src="pfp.jpg" alt="Founder Portrait" class="w-full h-64 object-cover object-center">
                         <div class="p-6">
                             <h3 class="text-xl font-bold text-deep-green">Amrit Singh</h3>
                             <p class="text-elegant-gold mb-2">Founder & CEO</p>
@@ -224,7 +224,7 @@
                     </div>
                     <!-- Team Member 2 -->
                      <div class="team-card bg-white rounded-lg shadow-lg overflow-hidden text-center">
-                        <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?q=80&w=1888&auto=format&fit=crop" alt="Travel Specialist Portrait" class="w-full h-64 object-cover object-center">
+                        <img src="pfp.jpg" alt="Travel Specialist Portrait" class="w-full h-64 object-cover object-center">
                         <div class="p-6">
                             <h3 class="text-xl font-bold text-deep-green">Priya Sharma</h3>
                             <p class="text-elegant-gold mb-2">Head of Luxury Travel</p>
@@ -233,7 +233,7 @@
                     </div>
                     <!-- Team Member 3 -->
                     <div class="team-card bg-white rounded-lg shadow-lg overflow-hidden text-center">
-                        <img src="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?q=80&w=1932&auto=format&fit=crop" alt="Visa Consultant Portrait" class="w-full h-64 object-cover object-center">
+                        <img src="pfp.jpg" alt="Visa Consultant Portrait" class="w-full h-64 object-cover object-center">
                         <div class="p-6">
                             <h3 class="text-xl font-bold text-deep-green">Raj Kumar</h3>
                             <p class="text-elegant-gold mb-2">Visa & Employment Specialist</p>
@@ -255,9 +255,9 @@
             </a>
             <p class="text-lg text-elegant-gold mb-6">Your Journey, Our Priority</p>
             <div class="flex justify-center space-x-6 mb-8">
-                <a href="#" class="hover:text-elegant-gold"><i data-lucide="facebook"></i></a>
-                <a href="#" class="hover:text-elegant-gold"><i data-lucide="instagram"></i></a>
-                <a href="#" class="hover:text-elegant-gold"><i data-lucide="twitter"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=61582183583786" class="hover:text-elegant-gold"><i data-lucide="facebook"></i></a>
+                <a href="https://www.instagram.com/goldenhoof_travels/" class="hover:text-elegant-gold"><i data-lucide="instagram"></i></a>
+
             </div>
             <p class="text-gray-400 text-sm">&copy; 2025 GoldenHoof Travels. All Rights Reserved.</p>
         </div>
