--- a/contact.html
+++ b/contact.html
@@ -158,7 +158,7 @@
         <div class="container mx-auto px-6">
             <div class="text-center mb-12">
                 <h1 class="text-4xl md:text-5xl font-bold text-deep-green mb-4">Get In Touch</h1>
-                <p class="text-gray-600 text-lg max-w-2xl mx-auto">We're here to help you plan your next journey or career move. Reach out to us through any of the channels below.</p>
+                <p class="text-gray-600 text-lg max-w-2xl mx-auto">We’re here to help you build your future abroad — whether it’s securing a work permit or pursuing higher studies overseas. Connect with us through any of the channels below and take your first step toward a global career.</p>
             </div>
             
             <div class="bg-white p-8 md:p-12 rounded-lg shadow-2xl max-w-6xl mx-auto">
@@ -253,9 +253,8 @@
             </a>
             <p class="text-lg text-elegant-gold mb-6">Your Journey, Our Priority</p>
             <div class="flex justify-center space-x-6 mb-8">
-                <a href="#" class="hover:text-elegant-gold"><i data-lucide="facebook"></i></a>
-                <a href="#" class="hover:text-elegant-gold"><i data-lucide="instagram"></i></a>
-                <a href="#" class="hover:text-elegant-gold"><i data-lucide="twitter"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=61582183583786" class="hover:text-elegant-gold"><i data-lucide="facebook"></i></a>
+                <a href="https://www.instagram.com/goldenhoof_travels/" class="hover:text-elegant-gold"><i data-lucide="instagram"></i></a>
             </div>
             <p class="text-gray-400 text-sm">&copy; 2025 GoldenHoof Travels. All Rights Reserved.</p>
         </div>
