--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
             <div class="container mx-auto px-6 grid md:grid-cols-2 gap-12 items-center">
                 <div class="text-center md:text-left animate-on-scroll slide-in-left">
                     <h2 class="text-4xl font-bold text-deep-green mb-4">Explore & Work Abroad</h2>
-                    <p class="text-gray-600 mb-6">GoldenHoof Travels is your trusted partner for both unforgettable luxury holidays and life-changing career moves. We offer bespoke travel packages and comprehensive visa assistance for skilled workers seeking opportunities overseas.</p>
+                    <p class="text-gray-600 mb-6">GoldenHoof Travels is your trusted partner for work permit and study visa solutions, guiding skilled professionals and students to opportunities abroad. While we do offer select luxury travel experiences, our core expertise lies in providing seamless visa assistance and helping you achieve your international career and educational goals.</p>
                     <a href="services.html" class="cta-button">Our Services</a>
                 </div>
                 <div class="grid grid-cols-2 gap-6 animate-on-scroll slide-in-right">
@@ -415,36 +415,36 @@
         <div class="py-20 bg-off-white">
             <div class="container mx-auto px-6 text-center">
                 <h2 class="text-4xl font-bold text-deep-green mb-4 animate-on-scroll slide-in-up">Featured Destinations</h2>
-                <p class="text-gray-600 max-w-2xl mx-auto mb-12 animate-on-scroll slide-in-up" style="transition-delay: 0.2s;">Explore our handpicked collection of breathtaking locations, each offering a unique and enriching travel experience.</p>
+                <p class="text-gray-600 max-w-2xl mx-auto mb-12 animate-on-scroll slide-in-up" style="transition-delay: 0.2s;">Explore a world of global opportunities, from career-advancing work permits to life-changing study programs, each opening doors to new experiences and growth abroad.</p>
                 <div class="grid md:grid-cols-3 gap-8">
                     <!-- Destination 1 -->
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover-effect animate-on-scroll slide-in-up" style="transition-delay: 0.3s;">
                         <svg class="plane-trail" viewBox="0 0 100 100" preserveAspectRatio="none"><path d="M0,0 H100 V100 H0 Z" fill="none" /><path d="M-10,5 L0,0 L-10,-5 L-7,0 Z" fill="var(--elegant-gold)" style="offset-path: path('M0,0 H100 V100 H0 Z');" /></svg>
-                        <img src="https://images.unsplash.com/photo-1523906834658-6e24ef2386f9?q=80&w=1966&auto=format&fit=crop" alt="Italy" class="w-full h-56 object-cover">
+                        <img src=Dubai.jpg alt="Dubai" class="w-full h-56 object-cover">
                         <div class="p-6">
-                            <h3 class="text-2xl font-bold text-deep-green mb-2">Amalfi Coast, Italy</h3>
-                            <p class="text-gray-600 mb-4">Cliffside villages, azure waters, and timeless romance.</p>
-                            <a href="#" class="font-bold text-elegant-gold hover:text-deep-green">Discover More &rarr;</a>
+                            <h3 class="text-2xl font-bold text-deep-green mb-2">Dubai, UAE</h3>
+                            <p class="text-gray-600 mb-4">Global careers, tax-free income, and a life of opportunity.</p>
+                            <a href="destination.html" class="font-bold text-elegant-gold hover:text-deep-green">Discover More &rarr;</a>
                         </div>
                     </div>
                     <!-- Destination 2 -->
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover-effect animate-on-scroll slide-in-up" style="transition-delay: 0.4s;">
                         <svg class="plane-trail" viewBox="0 0 100 100" preserveAspectRatio="none"><path d="M0,0 H100 V100 H0 Z" fill="none" /><path d="M-10,5 L0,0 L-10,-5 L-7,0 Z" fill="var(--elegant-gold)" style="offset-path: path('M0,0 H100 V100 H0 Z');" /></svg>
-                        <img src="https://images.unsplash.com/photo-1558521558-01314a1a3e5c?q=80&w=2070&auto=format&fit=crop" alt="Kyoto, Japan" class="w-full h-56 object-cover">
+                        <img src="moscow.jpg" alt="Moscow, Russia" class="w-full h-56 object-cover">
                         <div class="p-6">
-                            <h3 class="text-2xl font-bold text-deep-green mb-2">Kyoto, Japan</h3>
-                            <p class="text-gray-600 mb-4">Ancient temples, serene gardens, and vibrant traditions.</p>
-                            <a href="#" class="font-bold text-elegant-gold hover:text-deep-green">Discover More &rarr;</a>
+                            <h3 class="text-2xl font-bold text-deep-green mb-2">Moscow, Russia</h3>
+                            <p class="text-gray-600 mb-4">High demand, fast approvals, and a gateway to global experience.</p>
+                            <a href="destination.html" class="font-bold text-elegant-gold hover:text-deep-green">Discover More &rarr;</a>
                         </div>
                     </div>
                     <!-- Destination 3 -->
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden card-hover-effect animate-on-scroll slide-in-up" style="transition-delay: 0.5s;">
                          <svg class="plane-trail" viewBox="0 0 100 100" preserveAspectRatio="none"><path d="M0,0 H100 V100 H0 Z" fill="none" /><path d="M-10,5 L0,0 L-10,-5 L-7,0 Z" fill="var(--elegant-gold)" style="offset-path: path('M0,0 H100 V100 H0 Z');" /></svg>
-                        <img src="https://images.unsplash.com/photo-1562979314-1a8a27792452?q=80&w=1964&auto=format&fit=crop" alt="Santorini, Greece" class="w-full h-56 object-cover">
+                        <img src="singapore.jpg" alt="singapore" class="w-full h-56 object-cover">
                         <div class="p-6">
-                            <h3 class="text-2xl font-bold text-deep-green mb-2">Santorini, Greece</h3>
-                            <p class="text-gray-600 mb-4">Iconic sunsets, whitewashed villages, and volcanic beauty.</p>
-                            <a href="#" class="font-bold text-elegant-gold hover:text-deep-green">Discover More &rarr;</a>
+                            <h3 class="text-2xl font-bold text-deep-green mb-2">Singapore</h3>
+                            <p class="text-gray-600 mb-4">High salaries, safe living, and limitless career growth.</p>
+                            <a href=destination.html" class="font-bold text-elegant-gold hover:text-deep-green">Discover More &rarr;</a>
                         </div>
                     </div>
                 </div>
@@ -515,14 +515,13 @@
     <!-- Footer -->
     <footer class="bg-deep-green text-white py-12">
         <div class="container mx-auto px-6 text-center">
-            <a href="#">
+            <a href="index.html">
                 <img src="PURE LOGO.png" alt="GoldenHoof Travels Logo" class="h-16 mx-auto mb-4">
             </a>
             <p class="text-lg text-elegant-gold mb-6">Your Journey, Our Priority</p>
             <div class="flex justify-center space-x-6 mb-8">
-                <a href="#" class="hover:text-elegant-gold"><i data-lucide="facebook"></i></a>
-                <a href="#" class="hover:text-elegant-gold"><i data-lucide="instagram"></i></a>
-                <a href="#" class="hover:text-elegant-gold"><i data-lucide="twitter"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=61582183583786" class="hover:text-elegant-gold"><i data-lucide="facebook"></i></a>
+                <a href="https://www.instagram.com/goldenhoof_travels/" class="hover:text-elegant-gold"><i data-lucide="instagram"></i></a>
             </div>
             <p class="text-gray-400 text-sm">&copy; 2025 GoldenHoof Travels. All Rights Reserved.</p>
         </div>
@@ -744,5 +743,4 @@ if (scrollToTopBtn) {
 </script>
 </body>
 </html>
-
 
