--- a/work-visa.html
+++ b/work-visa.html
@@ -275,9 +275,8 @@
             </a>
             <p class="text-lg text-elegant-gold mb-6">Your Journey, Our Priority</p>
             <div class="flex justify-center space-x-6 mb-8">
-                <a href="#" class="hover:text-elegant-gold"><i data-lucide="facebook"></i></a>
-                <a href="#" class="hover:text-elegant-gold"><i data-lucide="instagram"></i></a>
-                <a href="#" class="hover:text-elegant-gold"><i data-lucide="twitter"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=61582183583786" class="hover:text-elegant-gold"><i data-lucide="facebook"></i></a>
+                <a href="https://www.instagram.com/goldenhoof_travels/" class="hover:text-elegant-gold"><i data-lucide="instagram"></i></a>
             </div>
             <p class="text-gray-400 text-sm">&copy; 2025 GoldenHoof Travels. All Rights Reserved.</p>
         </div>
