--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@
                 <a href="index.html" class="nav-link active">Home</a>
                 <a href="services.html" class="nav-link">Services</a>
                 <a href="work-visa.html" class="nav-link">Work & Visa</a>
-                <a href="destination.HTML" class="nav-link">Destinations</a>
-                <a href="GALLERY.HTML" class="nav-link">Gallery</a>
+                <a href="destination.html" class="nav-link">Destinations</a>
+                <a href="GALLERY.html" class="nav-link">Gallery</a>
                 <a href="about.html" class="nav-link">About Us</a>
                 <a href="contact.html" class="nav-link">Contact Us</a>
             </nav>
@@ -363,8 +363,8 @@
     <a href="index.html" class="block py-3 px-6 text-center text-white hover:bg-elegant-gold hover:text-deep-green nav-item-transition">Home</a>
     <a href="services.html" class="block py-3 px-6 text-center text-white hover:bg-elegant-gold hover:text-deep-green nav-item-transition">Services</a>
     <a href="work-visa.html" class="block py-3 px-6 text-center text-white hover:bg-elegant-gold hover:text-deep-green nav-item-transition">Work & Visa</a>
-    <a href="destination.HTML" class="block py-3 px-6 text-center text-white hover:bg-elegant-gold hover:text-deep-green nav-item-transition">Destinations</a>
-    <a href="gallery.HTML" class="block py-3 px-6 text-center text-white hover:bg-elegant-gold hover:text-deep-green nav-item-transition">Gallery</a>
+    <a href="destination.html" class="block py-3 px-6 text-center text-white hover:bg-elegant-gold hover:text-deep-green nav-item-transition">Destinations</a>
+    <a href="gallery.html" class="block py-3 px-6 text-center text-white hover:bg-elegant-gold hover:text-deep-green nav-item-transition">Gallery</a>
     <a href="about.html" class="block py-3 px-6 text-center text-white hover:bg-elegant-gold hover:text-deep-green nav-item-transition">About Us</a>
     <a href="contact.html" class="block py-3 px-6 text-center text-white hover:bg-elegant-gold hover:text-deep-green nav-item-transition">Contact Us</a>
 </div>
@@ -400,7 +400,7 @@
                             <h3 class="text-lg font-bold text-deep-green">Overseas Jobs</h3>
                         </div>
                     </a>
-                    <a href="destination.HTML">
+                    <a href="destination.html">
                          <div class="bg-off-white p-6 rounded-lg shadow-lg text-center card-hover-effect">
                             <svg class="plane-trail" viewBox="0 0 100 100" preserveAspectRatio="none"><path d="M0,0 H100 V100 H0 Z" fill="none" /><path d="M-10,5 L0,0 L-10,-5 L-7,0 Z" fill="var(--elegant-gold)" style="offset-path: path('M0,0 H100 V100 H0 Z');" /></svg>
                             <i data-lucide="palmtree" class="h-10 w-10 text-elegant-gold mx-auto mb-3"></i>
