--- a/services.html
+++ b/services.html
@@ -159,8 +159,8 @@
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="services.html" class="nav-link active">Services</a>
                 <a href="work-visa.html" class="nav-link">Work & Visa</a>
-                <a href="destination.HTML" class="nav-link">Destinations</a>
-                <a href="gallery.HTML" class="nav-link">Gallery</a>
+                <a href="destination.html" class="nav-link">Destinations</a>
+                <a href="gallery.html" class="nav-link">Gallery</a>
                
                 <a href="about.html" class="nav-link">About Us</a>
                 <a href="contact.html" class="nav-link">Contact Us</a>
@@ -176,8 +176,8 @@
     <a href="index.html" class="block py-3 px-6 text-center text-white hover:bg-elegant-gold hover:text-deep-green nav-item-transition">Home</a>
     <a href="services.html" class="block py-3 px-6 text-center text-white hover:bg-elegant-gold hover:text-deep-green nav-item-transition">Services</a>
     <a href="work-visa.html" class="block py-3 px-6 text-center text-white hover:bg-elegant-gold hover:text-deep-green nav-item-transition">Work & Visa</a>
-    <a href="destination.HTML" class="block py-3 px-6 text-center text-white hover:bg-elegant-gold hover:text-deep-green nav-item-transition">Destinations</a>
-    <a href="gallery.HTML" class="block py-3 px-6 text-center text-white hover:bg-elegant-gold hover:text-deep-green nav-item-transition">Gallery</a>
+    <a href="destination.html" class="block py-3 px-6 text-center text-white hover:bg-elegant-gold hover:text-deep-green nav-item-transition">Destinations</a>
+    <a href="gallery.html" class="block py-3 px-6 text-center text-white hover:bg-elegant-gold hover:text-deep-green nav-item-transition">Gallery</a>
     <a href="about.html" class="block py-3 px-6 text-center text-white hover:bg-elegant-gold hover:text-deep-green nav-item-transition">About Us</a>
     <a href="contact.html" class="block py-3 px-6 text-center text-white hover:bg-elegant-gold hover:text-deep-green nav-item-transition">Contact Us</a>
 </div>
