--- a/gallery.html
+++ b/gallery.html
@@ -227,151 +227,151 @@
             <div id="gallery-grid" class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
                 <!-- Images will be dynamically added here, but some are hardcoded for example -->
                 <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0002.jpg" alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0002.jpg" alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0005.jpg" alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0005.jpg" alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                  <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0007.jpg" alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0007.jpg" alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                  <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0006.jpg" alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0006.jpg" alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                  <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0008.jpg" alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0008.jpg" alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                  <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0030.jpg" alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0030.jpg" alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                  <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0024.jpg" alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0024.jpg" alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                  <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0034.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0034.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0028.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0028.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0030.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0030.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0038.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0038.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0037.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0037.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0035.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0035.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0033.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0033.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0032.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0032.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0031.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0031.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0030.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0030.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0029.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0029.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0028.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0028.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0027.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0027.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0026.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0026.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0025.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0025.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0023.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0023.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0022.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0022.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0021.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0021.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0020.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0020.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0019.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0019.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0018.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0018.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                  <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0017.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0017.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                  <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0016.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0016.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                  <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0015.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0015.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                  <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0014.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0014.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                  <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0013.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0013.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                  <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0011.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0011.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                  <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0010.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0010.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                  <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0004.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0004.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
                  <div class="gallery-item">
-                    <img src="gallery sections/IMG-20251016-WA0003.jpg  " alt="Client" class="w-full h-full object-cover">
+                    <img src="IMG-20251016-WA0003.jpg  " alt="Client" class="w-full h-full object-cover">
                     <div class="overlay"><i data-lucide="search" class="w-10 h-10 text-white"></i></div>
                 </div>
             </div>
