--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                 <a href="services.html" class="nav-link">Services</a>
                 <a href="work-visa.html" class="nav-link">Work & Visa</a>
                 <a href="destination.html" class="nav-link">Destinations</a>
-                <a href="GALLERY.html" class="nav-link">Gallery</a>
+                <a href="gallery.html" class="nav-link">Gallery</a>
                 <a href="about.html" class="nav-link">About Us</a>
                 <a href="contact.html" class="nav-link">Contact Us</a>
             </nav>
@@ -743,4 +743,5 @@ if (scrollToTopBtn) {
 </script>
 </body>
 </html>
+
 
