--- a/destination.html
+++ b/destination.html
@@ -193,7 +193,7 @@
                 <!-- Destination Card 2: Kyoto -->
                 <div class="destination-card bg-white rounded-lg shadow-lg overflow-hidden">
                      <div class="overflow-hidden h-64">
-                        <img src="moscow.jpg" alt="Temples in Kyoto, Japan" class="w-full h-full object-cover">
+                        <img src="moscow.jpg" alt="moscow" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
                         <h3 class="text-2xl font-bold text-deep-green mb-2">Russia</h3>
